plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}


bootJar.enabled = false // 현재 모듈의 jar 파일을 생성하지 않음
jar.enabled = true // 현재 모듈의 jar 파일을 생성

subprojects { // 모든 하위 모듈에 이 설정을 적용
    group = 'ex'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenCentral()
    }

    dependencies { // 모든 하위 모듈에 이 설정을 적용
        // spring
        implementation 'org.springframework.boot:spring-boot-starter'

        // spring web mvc
        implementation 'org.springframework.boot:spring-boot-starter-web'

        // lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // mapStruct
        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

        /* Test */

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        /* module */

        if (project.name != 'common') {
            implementation project(':common:common')
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
